Subindo melhorias no projeto

--- a/src/views/HomeView/HomeViewStyle.css
+++ b/src/views/HomeView/HomeViewStyle.css
@@ -16,12 +16,12 @@
 .book-item {
   display: flex;
   flex-direction: column;
-  background: rgb(247, 247, 247);
+  background: rgb(255, 255, 255);
   border-radius: 10px;
   color: rgb(91, 91, 91);
   padding: 20px;
   font-weight: 600;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
   margin: 0 auto;
   /* max-height: 400px; */
   gap: 10px;
@@ -37,7 +37,7 @@
 }
 
 .book-item img {
-  width: 140px;
+  width: 40px;
   object-fit: cover;
   margin-bottom: 10px;
 }
@@ -60,11 +60,12 @@
   gap: 10px;
 }
 
-@media (min-width: 308px) and (max-width: 1024px) {
+@media (min-width: 300px) and (max-width: 894px) {
   .main {
 
     padding: 50px;
     gap: 20px;
+    /* background: red; */
 
   }
 
@@ -75,12 +76,14 @@
   .books {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    row-gap: 120px;
+    row-gap: 60px;
     /* padding: 30px; */
   }
 
   .book-item {
     padding: 50px;
+    max-height: 550px;
+    min-height: 400px;
   }
 
   .book-item:hover {
