--- a/src/components/FooterComponent/FooterComponentStyle.css
+++ b/src/components/FooterComponent/FooterComponentStyle.css
@@ -4,7 +4,7 @@
   background: #032775;
   justify-content: space-between;
   height: 200px; 
-  padding: 10px 20px;
+  padding: 40px 60px;
   margin-top: 20px;
   gap: 20px;
 }
@@ -46,6 +46,7 @@
   gap: 20px;
   display: flex;
   flex-direction: column;
+  list-style: none;
   justify-content: center;
 }
 .footer-right ul li {
@@ -71,3 +72,55 @@
   text-decoration: none;
   font-weight: 600;
 }
+
+@media (max-width: 824px) {
+  .footer {
+    flex-direction: column;
+    align-items: center;
+    padding: 40px;
+    height: auto;
+    gap: 50px;
+  }
+
+  .footer-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    /* gap: 50px; */
+    height: auto;
+    margin-top: 0;
+  }
+
+  .footer .footer-left,
+  .footer .footer-right {
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .footer .footer-left {
+    flex-direction: row;
+    gap: 40px;
+  }
+
+  .footer .footer-left a {
+    padding: 20px;
+  }
+
+  .footer-right ul {
+    align-items: center;
+    list-style: none;
+    gap: 20px;
+  }
+
+  .footer-right ul li {
+    font-size: 28px;
+    text-align: center;
+  }
+
+  .dev-mention {
+    font-size: 20px;
+    padding: 10px 0;
+  }
+}
+
