--- a/src/components/HeaderComponent/HeaderComponentStyle.css
+++ b/src/components/HeaderComponent/HeaderComponentStyle.css
@@ -4,64 +4,182 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-}
-.logo{
-    display: flex;
-    gap: 20px;
-    color: #ffff;
-    cursor: pointer;
-}
-.nav ul {
-  display: flex;
-  gap: 20px;
+  position: relative;
 }
 
-.nav ul li {
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.logo img {
+  width: 30px;
+  height: 30px;
+}
+
+/* Botão hamburguer */
+.menu-toggle {
+  display: none;
+  font-size: 30px;
+  background: none;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+
+/* Drawer lateral */
+.side-drawer {
+  position: fixed;
+  top: 0;
+  right: -300px; /* escondido por padrão */
+  width: 250px;
+  height: 100%;
+  background-color: #032775;
+  color: white;
+  padding: 20px;
+  transition: right 0.3s ease-in-out;
+  z-index: 999;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.side-drawer.open {
+  right: 0;
+}
+
+.side-drawer ul {
   list-style: none;
-  background: #032775;
+  padding: 0;
+  margin-top: 30px;
+  width: 100%;
+}
+
+.side-drawer ul li {
+  margin-bottom: 20px;
+}
+
+.side-drawer ul li a {
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
   font-weight: bold;
 }
 
-li a {
-  text-decoration: none;
-  color: #fff;
-}
-
-li a:hover {
+.side-drawer ul li a:hover {
   color: orange;
 }
 
-@media (min-width: 308px) and (max-width: 1024px) {
+.close-drawer {
+  align-self: flex-end;
+  font-size: 30px;
+  background: none;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+
+/* Responsivo: botão só aparece no mobile */
+@media (max-width: 824px) {
+
   .header {
     display: flex;
     background: #032775;
     justify-content: space-between;
     align-items: center;
-    padding: 50px 80px;
+    padding: 40px 40px;
+    position: relative;
   }
-  .logo{
-      display: flex;
-      gap: 20px;
-      color: #ffff;
-      font-size: 30px;
-  }
-  .nav ul {
+  
+  .logo {
     display: flex;
-    gap: 40px;
-  }
-  
-  .nav ul li {
-    list-style: none;
-    background: #032775;
-  }
-  
-  li a {
-    text-decoration: none;
+    align-items: center;
+    font-size: 30px;
+    font-weight: 600;
+    gap: 20px;
     color: #fff;
-    font-size: 34px;
+    cursor: pointer;
+  }
+
+  
+  .logo img {
+    width: 40px;
+    height: 40px;
   }
   
-  li a:hover {
-    color: #868686;
+  /* Botão hamburguer */
+  .menu-toggle {
+    display: none;
+    font-size: 50px;
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+  }
+  
+  /* Drawer lateral */
+  .side-drawer {
+    position: fixed;
+    top: 0;
+    right: -110%; /* escondido por padrão */
+    width: 100%;
+    height: 100%;
+    background-color: #032775;
+    color: white;
+    padding: 20px;
+    transition: right 0.3s ease-in-out;
+    z-index: 999;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .side-drawer.open {
+    right: 0;
+    /* background: red; */
+    display: flex;
+    justify-content: start;
+  }
+  
+  .side-drawer ul {
+    list-style: none;
+    padding: 0;
+    margin-top: 100px;
+    text-align: center;
+    width: 100%;
+  }
+  
+  .side-drawer ul li {
+    margin-bottom: 20px;
+  }
+  
+  .side-drawer ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 32px;
+    font-weight: bold;
+  }
+  
+  .side-drawer ul li a:hover {
+    color: orange;
+  }
+  
+  .close-drawer {
+    margin-top: 20px;
+    margin-right: 20px;
+    align-self: flex-end;
+    font-size: 70px;
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+  }
+
+
+  .menu-toggle {
+    display: block;
   }
 }
