--- a/src/views/BookInfoView/BookInfoViewStyle.css
+++ b/src/views/BookInfoView/BookInfoViewStyle.css
@@ -18,12 +18,28 @@
   align-items: start;
   /* padding: 20px 40px 20px 20px; */
 }
-img {
-  width: 100px;
-  /* height: 600px; */
-  object-fit: cover;
-  cursor: default;
+
+.book-image {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background: red; */
 }
+
+.book-image img {
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
+img {
+  max-width: 100px;
+  /* height: auto; */
+  /* object-fit: cover; */
+  /* cursor: default; */
+}
+
 .books-sale {
   display: flex;
   gap: 20px;
@@ -68,31 +84,57 @@ img {
     flex-direction: column;
     justify-content: start;
     align-items: start;
-    font-size: 43px;
+    font-size: 34px;
     /* padding: 20px 40px 20px 20px; */
   }
-  .book-image img {
-    width: 70px;
+
+  .book-image {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* background: red; */
   }
+
+  .book-image img {
+    max-width: 100%;
+    height: auto;
+    object-fit: contain;
+  }
+
+
   .books-sale {
     display: flex;
-    gap: 20px;
+    font-size: 10px;
     align-items: center;
   }
-  
+
+  .books-sale img {
+    width: 100px;
+  }
+
+  p{
+    font-size: 14px;
+    /* background: green; */
+  }
+
+  .book-sinopse {
+    font-size: 20px;
+  }
+
   .book-price {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 38px;
+    font-size: 30px;
     color: rgb(255, 85, 0);
     font-weight: 800;
     gap: 10px;
   }
-  .books-sale img {
+  /* .books-sale img {
     width: 100px;
     height: auto;
     object-fit: contain;
 
-  }
+  } */
 }
