Subindo melhorias no projeto

--- a/src/components/HeaderComponent/HeaderComponentStyle.css
+++ b/src/components/HeaderComponent/HeaderComponentStyle.css
@@ -1,9 +1,9 @@
 .header {
   display: flex;
-  background: #032775;
+  /* background: #032775; */
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
+  padding: 10px 40px;
   position: relative;
 }
 
@@ -11,9 +11,11 @@
   display: flex;
   align-items: center;
   gap: 20px;
-  color: #fff;
+  color: #032775;
   cursor: pointer;
   font-weight: 700;
+  font-size: 24px;
+  transition: 200ms;
 }
 
 .logo img {
@@ -27,7 +29,7 @@
   font-size: 30px;
   background: none;
   border: none;
-  color: white;
+  color: #032775;
   cursor: pointer;
 }
 
@@ -39,7 +41,7 @@
   width: 250px;
   height: 100%;
   background-color: #032775;
-  color: white;
+  color: #032775;
   padding: 20px;
   transition: right 0.3s ease-in-out;
   z-index: 999;
@@ -55,18 +57,19 @@
 .side-drawer ul {
   list-style: none;
   padding: 0;
-  margin-top: 30px;
+  /* margin-top: 30px; */
   width: 100%;
 }
 
 .side-drawer ul li {
   margin-bottom: 20px;
+  cursor: pointer;
 }
 
 .side-drawer ul li a {
-  color: white;
+  color: #032775;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 20px;
   font-weight: bold;
 }
 
@@ -79,7 +82,7 @@
   font-size: 30px;
   background: none;
   border: none;
-  color: white;
+  color: #032775;
   cursor: pointer;
 }
 
@@ -90,13 +93,20 @@
 }
 
 .desktop-nav ul li a{
-  color: white;
+  color: #032775;
   text-decoration: none;
+  font-size: 22px;
   font-weight: 500;
+  transition: 200ms;
+  cursor: pointer;
+}
+
+.desktop-nav ul li a:hover{
+  color: orange;
 }
 
 /* Responsivo: botão só aparece no mobile */
-@media (min-width: 300px) and (max-width: 894px) {
+@media (min-width: 300px) and (max-width: 1100px) {
   .desktop-nav {
     display: flex;
     gap: 20px;
@@ -108,7 +118,7 @@
 
   .header {
     display: flex;
-    background: #032775;
+    /* background: #032775; */
     justify-content: space-between;
     align-items: center;
     padding: 40px 40px;
@@ -119,9 +129,9 @@
     display: flex;
     align-items: center;
     font-size: 30px;
-    font-weight: 600;
+    font-weight: 800;
     gap: 20px;
-    color: #fff;
+    color: #032775;
     cursor: pointer;
   }
 
@@ -136,7 +146,7 @@
     font-size: 50px;
     background: none;
     border: none;
-    color: white;
+    color: #032775;
     cursor: pointer;
   }
 
