--- a/src/views/BookInfoView/BookInfoViewStyle.css
+++ b/src/views/BookInfoView/BookInfoViewStyle.css
@@ -1,6 +1,5 @@
 .book {
   display: flex;
-  /* background: red; */
   align-items: center;
   justify-content: center;
 }
@@ -16,7 +15,7 @@
   flex-direction: column;
   justify-content: start;
   align-items: start;
-  /* padding: 20px 40px 20px 20px; */
+  font-size: 20px;
 }
 
 .book-image {
@@ -24,7 +23,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  /* background: red; */
 }
 
 .book-image img {
@@ -35,17 +33,29 @@
 
 img {
   max-width: 100px;
-  /* height: auto; */
-  /* object-fit: cover; */
-  /* cursor: default; */
 }
 
-.books-sale {
+.book-sale {
+  width: auto;
+  padding: 10px;
+  background: green;
+  gap: 10px;
+  border: 1px solid grey;
   display: flex;
-  gap: 20px;
   align-items: center;
+  border-radius: 10px;
 }
 
+.book-sale a {
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.book-sale img {
+  width: 30px;
+}
 .book-price {
   display: flex;
   justify-content: center;
@@ -53,18 +63,17 @@ img {
   color: rgb(255, 85, 0);
   font-weight: 500;
   gap: 10px;
+  font-size: 20px;
 }
 .book-image img {
-  width: 300px; /* Tamanho desejado */
-  height: 400px; /* Tamanho desejado */
-  object-fit: cover; /* Mantém a proporção e preenche o container */
+  width: 240px !important;
+  height: 500px !important;
+  object-fit: cover; 
 }
 
-
-@media (min-width: 308px) and (max-width: 1024px) {
+@media (min-width: 308px) and (max-width: 904px) {
   .book {
     display: flex;
-    /* background: red; */
     align-items: center;
     justify-content: center;
   }
@@ -73,7 +82,6 @@ img {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* text-align: center; */
     width: 100%;
     flex: 1;
     box-sizing: border-box;
@@ -82,45 +90,24 @@ img {
   .book-container .book-info {
     display: flex;
     flex-direction: column;
-    justify-content: start;
-    align-items: start;
-    font-size: 34px;
-    /* padding: 20px 40px 20px 20px; */
+    justify-content: space-around;
+    align-items: center;
+    font-size: 30px;
   }
 
   .book-image {
-    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    /* background: red; */
   }
 
   .book-image img {
-    width: 300px; /* Tamanho desejado */
-    height: 400px; /* Tamanho desejado */
-    object-fit: cover; /* Mantém a proporção e preenche o container */
+    width: auto;
+    height: auto !important;
+    object-fit: contain; 
+    background-color: #f0f0f0; 
   }
-
-
-  .books-sale {
-    display: flex;
-    font-size: 10px;
-    align-items: center;
-  }
-
-  .books-sale img {
-    width: 100px;
-  }
-
-  p{
-    font-size: 14px;
-    /* background: green; */
-  }
-
-  .book-sinopse {
-    font-size: 20px;
-  }
+  
 
   .book-price {
     display: flex;
@@ -132,4 +119,119 @@ img {
     gap: 10px;
   }
 
+  .book-description {
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+  }
+
+  .book-description p{
+   font-size: 24px;
+   font-weight: 500;
+  }
+
+  .book-sale {
+    width: auto;
+    padding: 30px;
+    background: green;
+    border: 1px solid grey;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    border-radius: 20px;
+  }
+
+  .book-sale a {
+    text-decoration: none;
+    color: white;
+    font-size: 24px;
+    font-weight: 600;
+  }
+
+  .book-sale img {
+    width: 50px;
+  }
 }
+
+@media (min-width: 900px) and (max-width: 1004px) {
+  .book {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .book .book-container {
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    flex: 1;
+    box-sizing: border-box;
+    gap: 20px;
+  }
+  .book-container .book-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 36px;
+  }
+
+  .book-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .book-image img {
+    width: auto;
+    height: auto  !important;
+    object-fit: contain; 
+    background-color: #f0f0f0; 
+  }
+  
+  .book-price {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 34px;
+    color: rgb(255, 85, 0);
+    font-weight: 800;
+    gap: 10px;
+  }
+
+  .book-description {
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+  }
+
+  .book-description p{
+   font-size: 34px;
+   font-weight: 400;
+  }
+
+  .book-sale {
+    margin-top: 20px;
+    width: auto;
+    padding: 30px;
+    background: green;
+    border: 1px solid grey;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    border-radius: 20px;
+  }
+
+  .book-sale a {
+    text-decoration: none;
+    color: white;
+    font-size: 34px;
+    font-weight: 600;
+  }
+
+  .book-sale img {
+    width: 70px;
+  }
+}
+
