--- a/src/views/HomeView/HomeViewStyle.css
+++ b/src/views/HomeView/HomeViewStyle.css
@@ -1,7 +1,7 @@
 .main {
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  padding: 20px 40px;
   color: #505050;
   flex: 1;
   overflow-y: auto;
@@ -60,11 +60,12 @@
   gap: 10px;
 }
 
-@media (min-width: 300px) and (max-width: 894px) {
+@media (min-width: 300px) and (max-width: 1094px) {
   .main {
 
     padding: 50px;
     gap: 20px;
+    font-size: 24px;
     /* background: red; */
 
   }
